# multiasset-contract

./: .gitignore  Cargo.toml  README.md  addresses.txt
contract/: Forc.toml
contract/src/: errors.sw  events.sw  main.sw
src/: lib.rs  main.rs
src/commands/: cli.rs  utils.rs
src/commands/core/: asset_new.rs  cli.rs  deploy.rs  mint.rs  mint_many.rs  mod.rs
src/commands/info/: bech32_conv.rs  cli.rs  decimals.rs  mod.rs  name.rs  restricted_mint.rs  symbol.rs  total_assets.rs  total_supply.rs
tests/functions/: asset_new.rs  mint.rs  mod.rs  transfer_ownership.rs
tests/setup/: mod.rs
